--- a/H1EmuLauncher/Windows/AboutPage.xaml
+++ b/H1EmuLauncher/Windows/AboutPage.xaml
@@ -192,7 +192,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                                • Kentin • LcplReaper • Traqnar • Meme
+                                • Kentin • LcplReaper • Traqnar • Meme •
 
                             </Paragraph>
 
@@ -215,7 +215,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                                • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo • 余科辰 •
+                                • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo • doggo • Ghost • 余科辰 •
 
                             </Paragraph>
 
@@ -307,7 +307,7 @@
                             FontSize="18"
                             FontWeight="Light">
 
-                                • Booze (Orphanfeast87) • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D
+                                • Booze (Orphanfeast87) • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D • A Mad Midget •
 
                             </Paragraph>
 
