--- a/H1EmuLauncher/Windows/Launcher.xaml
+++ b/H1EmuLauncher/Windows/Launcher.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:f="clr-namespace:H1EmuLauncher.Classes"
         mc:Ignorable="d"
         UseLayoutRounding="True"
         Title="H1Emu Launcher"
@@ -678,7 +679,8 @@
                                    Source="..\\SteamFrame\Login.xaml"
                                    NavigationUIVisibility="Hidden"
                                    VerticalContentAlignment="Top"
-                                   Padding="0" Height="140"/>
+                                   Padding="0" Height="140"
+                                   f:DisableFrameNavigation.Disable="True"/>
                         </Grid>
 
                         <Grid
