--- a/H1EmuLauncher/Language/StringResources.hr.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr.xaml
@@ -44,7 +44,7 @@
     <system:String x:Key="item42">PATCHANJE</system:String>
     <system:String x:Key="item43">NAJNOVIJI</system:String>
     <system:String x:Key="item44">STABILNI</system:String>
-    <system:String x:Key="item45">Ako imate problema pri učitavanju igre, pokušajte ispočetka instalirati patch datoteke pritiskom ovdje.</system:String>
+    <system:String x:Key="item45">Ako imate problema s igricom, probajte ponovno instalirati patch ili</system:String>
     <system:String x:Key="item46">Kliknite ovdje za preuzimanje najnovije verzije servera.</system:String>
     <system:String x:Key="item47">Kliknite ovdje za preuzimanje najnovije stabilne verzije servera.</system:String>
     <system:String x:Key="item48">Traženje nove verzije...</system:String>
@@ -133,7 +133,7 @@
     <system:String x:Key="item139">H1Emu Server</system:String>
     <system:String x:Key="item140">Igraj sam</system:String>
 	<system:String x:Key="item141">Novi Server...</system:String>
-    <system:String x:Key="item142">Bačena iznimka: {0}</system:String>
+    <system:String x:Key="item142">Bačena iznimka:</system:String>
     <system:String x:Key="item143">Upisano ime već postoji na listi servera.</system:String>
     <system:String x:Key="item144">Ime servera...</system:String>
     <system:String x:Key="item145">IP servera...</system:String>
@@ -167,4 +167,8 @@
     <system:String x:Key="item173">Prijavite grešku...</system:String>
     <system:String x:Key="item174">Ovdje možete prijaviti sve greške koje ste iskusili u igri dok koristite datoteke poslužitelja H1Emu:</system:String>
     <system:String x:Key="item175">Ovdje možete prijaviti sve greške koje ste iskusili dok ste koristili H1Emu Launcher:</system:String>
+    <system:String x:Key="item176">izbrišite svoje singleplayer podatke...</system:String>
+    <system:String x:Key="item177">Nisu pronađeni singleplayer podaci.</system:String>
+    <system:String x:Key="item178">Brisanje singleplayer podataka moglo bi popraviti problem koji imate, budite upozoreni da će te izgubiti sav progres.\n\nŽelite li nastaviti?</system:String>
+    <system:String x:Key="item179">Uspješno izbrisani singleplayer podaci.</system:String>
 </ResourceDictionary>
