--- a/H1EmuLauncher/Language/StringResources.tr-TR.xaml
+++ b/H1EmuLauncher/Language/StringResources.tr-TR.xaml
@@ -44,7 +44,7 @@
     <system:String x:Key="item42">YENİDEN YAMA</system:String>
     <system:String x:Key="item43">SON</system:String>
     <system:String x:Key="item44">İSTİKRARLI</system:String>
-    <system:String x:Key="item45">Eğer oyuna girmekte sıkıntı yaşıyorsanız, buradan yeniden yama yapmayı deneyin.</system:String>
+    <system:String x:Key="item45">Oyun sorunları yaşıyorsanız yamayı yeniden yüklemeyi deneyin veya</system:String>
     <system:String x:Key="item46">Sunucuların son halini indirmek için buraya tıklayın.</system:String>
     <system:String x:Key="item47">Sunucuların son kararlı halini indirmek için buraya tıklayın.</system:String>
     <system:String x:Key="item48">Güncellemeler kontrol ediliyor...</system:String>
@@ -133,7 +133,7 @@
     <system:String x:Key="item139">H1Emu Sunucusu</system:String>
     <system:String x:Key="item140">Tek Oyuncu</system:String>
     <system:String x:Key="item141">Yeni Sunucu...</system:String>
-    <system:String x:Key="item142">Olağandışı Durum: {0}</system:String>
+    <system:String x:Key="item142">Olağandışı Durum:</system:String>
     <system:String x:Key="item143">Sunucu ismi listede mevcut.</system:String>
     <system:String x:Key="item144">Sunucu Adı...</system:String>
     <system:String x:Key="item145">Sunucu IP...</system:String>
@@ -167,4 +167,8 @@
     <system:String x:Key="item173">Hata bildir...</system:String>
     <system:String x:Key="item174">H1Emu Sunucu dosyalarını kullanırken oyunda karşılaştığınız hataları buradan bildirebilirsiniz:</system:String>
     <system:String x:Key="item175">H1Emu Başlatıcı'yı kullanırken karşılaştığınız hataları buradan bildirebilirsiniz:</system:String>
+    <system:String x:Key="item176">tek oyunculu verilerinizi silin...</system:String>
+    <system:String x:Key="item177">Tek oyunculu veri bulunamadı.</system:String>
+    <system:String x:Key="item178">Tek oyunculu verilerinizi silmek, karşılaştığınız sorunları çözebilir, tüm ilerlemenizi kaybedeceğiniz konusunda uyarınız.\n\nDevam etmek istiyor musunuz?</system:String>
+    <system:String x:Key="item179">Tek oyunculu veriler başarıyla silindi.</system:String>
 </ResourceDictionary>
