--- a/H1EmuLauncher/Windows/Launcher.xaml
+++ b/H1EmuLauncher/Windows/Launcher.xaml
@@ -347,8 +347,7 @@
                             <TextBlock Foreground="White"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Right"
-                                       Margin="0,0,25,10"
-                                       TextWrapping="Wrap">
+                                       Margin="0,0,25,10">
                                 
                                 <TextBlock Text="{DynamicResource item12}"/>
 
