--- a/H1EmuLauncher/Windows/Settings.xaml
+++ b/H1EmuLauncher/Windows/Settings.xaml
@@ -209,18 +209,18 @@
 
                         <!-- Install patch button -->
                         <Button x:Name="patchButton"
-                            Click="InstallPatch"
-                            Width="220"
-                            Height="40"
-                            Margin="20"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Left"
-                            Foreground="White"
-                            FontFamily="Arial Black"
-                            FontSize="24"
-                            BorderThickness="0"
-                            Content="{DynamicResource item42}"
-                            Style="{DynamicResource StandardButton}">
+                                Click="InstallPatch"
+                                Width="220"
+                                Height="40"
+                                Margin="20"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Left"
+                                Foreground="White"
+                                FontFamily="Arial Black"
+                                FontSize="24"
+                                BorderThickness="0"
+                                Content="{DynamicResource item42}"
+                                Style="{DynamicResource StandardButton}">
 
                             <Button.Background>
                                 <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
@@ -229,13 +229,23 @@
 
                         <!-- Patch button text -->
                         <TextBlock Grid.Column="1"
-                               Width="400"
-                               Margin="20"
-                               VerticalAlignment="Center"
-                               HorizontalAlignment="Center"
-                               Foreground="White"
-                               TextWrapping="Wrap"
-                               Text="{DynamicResource item45}"/>
+                                   Width="400"
+                                   Margin="0"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   Foreground="White"
+                                   TextWrapping="Wrap">
+
+                            <Run Text="{DynamicResource item45}"/>
+                            
+                            <Hyperlink Click="DeleteSingleplayerDataClick"
+                                       Foreground="White">
+                                    
+                                <Run Text="{DynamicResource item176}"
+                                     Style="{DynamicResource HyperLinkStyleRun}"/>
+
+                            </Hyperlink>
+                        </TextBlock>
 
                         <!-- Install latest server button -->
                         <Button x:Name="latestButton"
@@ -334,20 +344,20 @@
 
             <!-- Hyperlink to open account key window -->
             <TextBlock
-                Grid.Row="2"
-                Foreground="White"
-                Margin="25,1,0,0"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Left">
+                    Grid.Row="2"
+                    Foreground="White"
+                    Margin="25,1,0,0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Left">
                 
-                <Hyperlink Click="AccountKeyClick"
-                           Foreground="White">
+                    <Hyperlink Click="AccountKeyClick"
+                               Foreground="White">
                     
-                    <TextBlock Text="{DynamicResource item154}"
-                               Style="{DynamicResource HyperLinkStyle}"/>
+                        <TextBlock Text="{DynamicResource item154}"
+                                   Style="{DynamicResource HyperLinkStyle}"/>
                     
-                </Hyperlink>
-            </TextBlock>
+                    </Hyperlink>
+                </TextBlock>
 
             <!-- Current installed version of the launcher number -->
             <TextBlock x:Name="currentVersion"
