--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">Using app branch: {0}</system:String>
     <system:String x:Key="item56">Processing depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-allocating space...</system:String>
-    <system:String x:Key="item58">Версията на играта не се поддържа от H1Emu.\n\nМоля, не забравяйте да използвате версия на играта 15 януари 2015 г. или 22 декември 2016 г.\n\nМожете да използвате стартовия панел, за да изтеглите някоя от тези версии с входа в Steam на главната страница.</system:String>
+    <system:String x:Key="item58">Версията на играта не се поддържа от H1Emu.\n\nМоля, не забравяйте да използвате версия на играта 15 януари 2015 г. или 22 декември 2016 г.\n\nТрябва да изтеглите една от тези версии, като използвате този стартер с вашия акаунт в Steam, който притежава Just Survive.</system:String>
     <system:String x:Key="item59">Потребителско име</system:String>
     <system:String x:Key="item60">Парола</system:String>
     <system:String x:Key="item61">Вижте пълни подробности за обновлението...</system:String>
