--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">使用游戏分支：{0}</system:String>
     <system:String x:Key="item56">处理数据包 {0} - {1}</system:String>
     <system:String x:Key="item57">预分配空间...</system:String>
-    <system:String x:Key="item58">H1Emu 不支持游戏版本。\n\n请记住使用 2015 年 1 月 15 日或 2016 年 12 月 22 日的游戏版本。\n\n您可以使用启动器通过主页上的 Steam 登录下载其中任何一个版本。</system:String>
+    <system:String x:Key="item58">H1Emu 不支持游戏版本。\n\n请记住使用 2015 年 1 月 15 日或 2016 年 12 月 22 日的游戏版本。\n\n您需要使用具有 Just Survive 所有权的 Steam 帐户使用此启动器下载这些版本之一。</system:String>
     <system:String x:Key="item59">用户名</system:String>
     <system:String x:Key="item60">这里输入Steam密码</system:String>
     <system:String x:Key="item61">查看最新版本的详细信息...</system:String>
