--- a/H1EmuLauncher/Language/StringResources.fr.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">Utilisation d'une branche d'application: {0}</system:String>
     <system:String x:Key="item56">Dépôt de traitement {0} - {1}</system:String>
     <system:String x:Key="item57">Pré-attribution de l'espace...</system:String>
-    <system:String x:Key="item58">Version du jeu non prise en charge par H1Emu.\n\nN'oubliez pas d'utiliser la version du jeu du 15 janvier 2015 ou du 22 décembre 2016.\n\nVous pouvez utiliser le lanceur pour télécharger l'une ou l'autre de ces versions avec la connexion Steam sur la page principale.</system:String>
+    <system:String x:Key="item58">Version du jeu non prise en charge par H1Emu.\n\nN'oubliez pas d'utiliser la version du jeu du 15 janvier 2015 ou du 22 décembre 2016.\n\nVous devez télécharger l'une de ces versions à l'aide de ce lanceur avec votre compte Steam qui appartient à Just Survive.</system:String>
     <system:String x:Key="item59">Nom d'utilisateur</system:String>
     <system:String x:Key="item60">Mot de passe</system:String>
     <system:String x:Key="item61">Voir tous les détails de la mise à jour...</system:String>
