--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">gebruikt app branch: {0}</system:String>
     <system:String x:Key="item56">Verwerken depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-alocatie opslag...</system:String>
-    <system:String x:Key="item58">Spelversie wordt niet ondersteund door H1Emu.\n\nVergeet niet om de spelversie te gebruiken op 15 januari 2015 of 22 december 2016.\n\nJe kunt de launcher gebruiken om een ​​van deze versies te downloaden met de Steam-login op de hoofdpagina.</system:String>
+    <system:String x:Key="item58">Spelversie wordt niet ondersteund door H1Emu.\n\nVergeet niet om de spelversie te gebruiken op 15 januari 2015 of 22 december 2016.\n\nJe moet een van deze versies downloaden met behulp van deze launcher met je Steam-account dat eigendom is van Just Survive.</system:String>
     <system:String x:Key="item59">Steam ID</system:String>
     <system:String x:Key="item60">Wachtwoord</system:String>
     <system:String x:Key="item61">Bekijk alle details van update...</system:String>
