--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">Using app branch: {0}</system:String>
     <system:String x:Key="item56">Przetwarzam depot {0} - {1}</system:String>
     <system:String x:Key="item57">Wstępne przydzielanie miejsca na dysku...</system:String>
-    <system:String x:Key="item58">Wersja gry nie jest obsługiwana przez H1Emu.\n\nPamiętaj, aby użyć wersji gry 15 stycznia 2015 lub 22 grudnia 2016.\n\nMożesz użyć programu uruchamiającego, aby pobrać jedną z tych wersji, logując się do Steam na stronie głównej.</system:String>
+    <system:String x:Key="item58">Wersja gry nie jest obsługiwana przez H1Emu.\n\nPamiętaj, aby użyć wersji gry 15 stycznia 2015 lub 22 grudnia 2016.\n\nMusisz pobrać jedną z tych wersji za pomocą tego programu uruchamiającego ze swoim kontem Steam, które jest właścicielem Just Survive.</system:String>
     <system:String x:Key="item59">Nazwa użytkownika</system:String>
     <system:String x:Key="item60">Hasło</system:String>
     <system:String x:Key="item61">Sprawdź pełen opis aktuzacji...</system:String>
